--- a/apps/documenteditor/main/resources/less/toolbar.less
+++ b/apps/documenteditor/main/resources/less/toolbar.less
@@ -137,6 +137,7 @@
 }
 
 .save-style-container {
+    display: none;
     border-left: @scaled-one-px-value-ie solid @border-regular-control-ie;
     border-left: @scaled-one-px-value solid @border-regular-control;
     border-top: @scaled-one-px-value-ie solid @border-regular-control-ie;
