--- a/apps/common/main/resources/less/colors-table-classic.less
+++ b/apps/common/main/resources/less/colors-table-classic.less
@@ -1,7 +1,7 @@
 
 :root {
     .theme-classic-light {
-        --toolbar-header-document: #446995;
+        --toolbar-header-document: #fa541c;
         --toolbar-header-spreadsheet: #40865c;
         --toolbar-header-presentation: #aa5252;
 
