--- a/apps/common/main/resources/less/colors-table-ie-fix.less
+++ b/apps/common/main/resources/less/colors-table-ie-fix.less
@@ -1,5 +1,5 @@
 
-@toolbar-header-document-ie: #446995;
+@toolbar-header-document-ie: #fa541c;
 @toolbar-header-spreadsheet-ie: #40865c;
 @toolbar-header-presentation-ie: #aa5252;
 
