--- a/apps/common/main/resources/less/colors-table.less
+++ b/apps/common/main/resources/less/colors-table.less
@@ -11,7 +11,7 @@
 
 
 :root {
-    --toolbar-header-document: #446995;
+    --toolbar-header-document: #fa541c;
     --toolbar-header-spreadsheet: #40865c;
     --toolbar-header-presentation: #aa5252;
 
