hidden user name

--- a/apps/common/main/resources/less/header.less
+++ b/apps/common/main/resources/less/header.less
@@ -354,6 +354,7 @@
     width: 40px;
     padding: 1px 3px;
     border: var(--scaled-one-pixel, 1px) solid transparent;
+    display: none;
 }
 
 .btn-current-user, .btn-header {
