--- a/apps/common/main/resources/less/header.less
+++ b/apps/common/main/resources/less/header.less
@@ -153,7 +153,7 @@
             display: inline-block;
             vertical-align: middle;
 
-            background-image: ~"url('@{common-image-const-path}/header/header-logo_s.svg')";
+            // background-image: ~"url('@{common-image-const-path}/header/header-logo_s.svg')";
             background-repeat: no-repeat;
         }
 
