--- a/apps/common/main/resources/less/toolbar.less
+++ b/apps/common/main/resources/less/toolbar.less
@@ -493,7 +493,7 @@
             .extra {
                 #header-logo {
                     i {
-                        background-image: ~"url('@{common-image-const-path}/header/dark-logo_s.svg')";
+                        // background-image: ~"url('@{common-image-const-path}/header/dark-logo_s.svg')";
                         background-repeat: no-repeat;
                     }
                 }
